load Bootstrap & Angular from CDN

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <title>Watcher Badges</title>
-  <link rel="stylesheet" href="lib/paper.min.css" />
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" />
   <link rel="stylesheet" href="app.css" />
-  <script src="lib/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <script src="watcher_badges.js"></script>
   <script src="app.js"></script>
 </head>
