--- a/demo/index.html
+++ b/demo/index.html
@@ -1,16 +1,18 @@
 <!doctype html>
-<html ng-app="WB">
+<html ng-app="Demo">
 
 <head>
   <title>Watcher Badges</title>
+  <!-- <link rel="stylesheet" href="lib/paper.min.css" /> -->
+  <!-- <script src="lib/angular.min.js"></script> -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" />
-  <link rel="stylesheet" href="app.css" />
+  <link rel="stylesheet" href="demo.css" />
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <script src="watcher_badges.js"></script>
-  <script src="app.js"></script>
+  <script src="demo.js"></script>
 </head>
 
-<body watcher-badges ng-controller="MainController as ctrl">
+<body watcher-badges ng-controller="DemoController as ctrl">
   <main class="container">
     <header class="page-header">
       <h1>Watcher Badges</h1>
