--- a/demo/index.html
+++ b/demo/index.html
@@ -5,9 +5,13 @@
   <title>Watcher Badges</title>
   <!-- <link rel="stylesheet" href="lib/paper.min.css" /> -->
   <!-- <script src="lib/angular.min.js"></script> -->
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" />
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" />
   <link rel="stylesheet" href="demo.css" />
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
+  <script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.js"></script>
+  <script src="http://masonry.desandro.com/masonry.pkgd.js"></script>
+  <script src="http://passy.github.io/angular-masonry/angular-masonry.js"></script>
   <script src="watcher_badges.js"></script>
   <script src="demo.js"></script>
 </head>
@@ -22,39 +26,28 @@
       </p>
     </header>
 
-    <form ng-submit="ctrl.create()">
+    <form ng-submit="ctrl.search()">
       <fieldset>
-        <legend>Enter a TODO item</legend>
+        <legend>Enter an artist name</legend>
         <div class="form-group">
-          <input type="text" ng-model="ctrl.description" class="form-control" />
+          <input type="text" ng-model="ctrl.query" class="form-control" />
         </div>
         <div class="form-group">
-          <input type="submit" class="btn btn-primary" value="Create" />
+          <input type="submit" class="btn btn-primary" value="Search" />
         </div>
       </fieldset>
     </form>
 
-    <p><button class="btn btn-primary" ng-click="ctrl.createMany()">Or just create 100 items</button></p>
-
-    <div class="row">
-      <div class="col-md-6">
-        <h3>TODO</h3>
-
-        <ul class="list-group">
-          <li class="list-group-item" ng-repeat="todo in ctrl.todos | filter:{finished:false}">
-            <a ng-click="todo.toggle()">{{$index + 1}}: {{todo.description}}</a>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-md-6">
-        <h3>Completed</h3>
-
-        <ul class="list-group">
-          <li class="list-group-item" ng-repeat="todo in ctrl.todos | filter:{finished:true}">
-            <a ng-click="todo.toggle()">{{$index + 1}}: {{todo.description}}</a>
-          </li>
-        </ul>
+    <div masonry class="row">
+      <div class="masonry-brick col-md-3" ng-repeat="artist in ctrl.artists">
+        <div class="thumbnail">
+          <div class="image" style="background-image: url({{artist.imageUrl}})" title="{{artist.name}}"></div>
+          <div class="caption">
+            <h3><a href="{{artist.artistUrl}}" ng-bind="artist.name"></a></h3>
+            <p class="biography" ng-bind="artist.biography.text"></p>
+            <p><small><a href="{{artist.biography.readMoreLink}}" target="_blank">read more</a></small></p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
