use Angular + Bootstrap from CDNs

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <title>Watcher Badges</title>
-  <link rel="stylesheet" href="lib/paper.min.css" />
-  <script src="lib/angular.min.js"></script>
-  <!-- <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" /> -->
+  <!-- <link rel="stylesheet" href="lib/paper.min.css" /> -->
+  <!-- <script src="lib/angular.min.js"></script> -->
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.2.0/paper/bootstrap.min.css" />
   <link rel="stylesheet" href="demo.css" />
   <script src="http://code.jquery.com/jquery-2.1.1.js"></script>
-  <!-- <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script> -->
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.26/angular.min.js"></script>
   <script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.js"></script>
   <script src="http://masonry.desandro.com/masonry.pkgd.js"></script>
   <script src="http://passy.github.io/angular-masonry/angular-masonry.js"></script>
